# langserve-replit-template

./: .replit  README.md  pyproject.toml
app/: server.py
